# myswarms

./: .gitignore  CLAUDE.md  README-HEDGE.md  README.md  docker-compose.hedge.yml  eslint.config.mjs  hearst-cockpit-shell-0.1.0.tgz  hearst-hub-sdk-0.1.0.tgz  next.config.ts  package-lock.json  package.json  railway.toml  start-all.sh
.archive/front-nextjs-2026-05-20/: MIGRATION_NOTES.md  instrumentation-client.ts
.archive/front-nextjs-2026-05-20/electron/: main.ts  preload.cts
.archive/front-nextjs-2026-05-20/src/: proxy.ts
.github/workflows/: ci.yml
docs/: OMNISCAN_2026-05-19.html
docs/crewai/: 00-index.md  01-foundations.md  02-flows.md  03-tools-data.md  04-tools-web.md  05-guides-learn.md  06-mcp-observability.md  07-enterprise-integrations.md  08-enterprise-guides.md
electron/: entitlements.mac.plist  main.ts  preload.cts  splash.html  tsconfig.json
scripts/hedge/: generate-keys.sh
services/crewai-engine/: Dockerfile  README.md  docker-compose.gpu2.yml  pyproject.toml  railway.json
services/crewai-engine/docs/: RAILWAY_DEPLOY.md
services/crewai-engine/scripts/: railway-deploy.sh  test_architect_cortex_e2e.py
services/crewai-engine/src/: composio_session.py  config.py  llms.py  main.py  scheduler.py
services/crewai-engine/src/agents/: __init__.py  architect.py  definitions.py
services/crewai-engine/src/crews/: __init__.py  daily_chief_crew.py  dynamic_crew.py
services/crewai-engine/src/flows/: chief_of_staff_flow.py  dynamic_swarm_flow.py
services/crewai-engine/src/hooks/: __init__.py  llm_hooks.py  tool_hooks.py
services/crewai-engine/src/observability/: langfuse_setup.py
services/crewai-engine/src/persistence/: __init__.py  chief_decision_store.py  chief_step_store.py  run_store.py  swarm_store.py
services/crewai-engine/src/routes/: crews.py  health.py  swarms.py
services/crewai-engine/src/tools/: __init__.py  digest_formatter.py  priority_scorer.py  telegram_sender.py  vault_search.py
services/crewai-engine/swarms/: revue-projet.yaml
services/crewai-engine/tests/: conftest.py  test_adaptive_timeout.py  test_chief_decision_store.py  test_chief_step_store.py  test_composio_session.py  test_flush_on_router_timeout.py  test_stale_run_cleanup.py  test_step_writer.py  test_token_usage_extraction.py  test_vault_search.py
services/execution-engine/: Dockerfile  pyproject.toml
services/execution-engine/src/: config.py  main.py  repo.py  run_modes.py
services/execution-engine/src/adapters/: __init__.py  base.py  binance.py  hyperliquid.py
services/execution-engine/src/workers/: __init__.py  deadman_worker.py  exec_worker.py  reconcile_worker.py
services/market-data-service/: Dockerfile  pyproject.toml
services/market-data-service/src/: config.py  main.py  repo.py  state.py
services/market-data-service/src/ingesters/: __init__.py  base.py  binance_ws.py  hyperliquid_ws.py
services/market-data-service/src/workers/: __init__.py  snapshot_worker.py
services/observability/: hedge_rules.yml  prometheus.yml
services/risk-engine/: Dockerfile  pyproject.toml
services/risk-engine/src/: config.py  evaluator.py  main.py  market.py  market.py.bak  models.py  repo.py
services/risk-engine/src/rules/: __init__.py  atr.py  cvar.py  cvar.py.bak  drawdown.py  kelly.py  sizing.py
services/risk-engine/src/workers/: __init__.py  risk_worker.py
services/risk-engine/tests/: test_evaluator.py
services/strategy-builder/: Dockerfile  pyproject.toml
services/strategy-builder/src/: config.py  llm.py  main.py  models.py  repo.py
services/strategy-builder/src/workers/: __init__.py  builder_worker.py
services/swarm-orchestrator/: Dockerfile  pyproject.toml
services/swarm-orchestrator/src/: config.py  main.py  repo.py
services/swarm-orchestrator/src/agents/: __init__.py  base.py  macro.py  onchain.py  sentiment.py  technical.py
services/swarm-orchestrator/src/workers/: __init__.py  swarm_worker.py
shared/hmac/python/: hedge_hmac.py  verify_audit_chain.py
shared/hmac/typescript/: hedge-hmac.ts
shared/schemas/: risk_decision.schema.json  sized_order.schema.json  strategy_request.schema.json  strategy_spec.schema.json  swarm_signal.schema.json
src/: middleware.ts  proxy.ts
src/__tests__/: decisions-route.test.ts  derive-view-model.test.ts
src/app/: cockpit.css  dashboard.css  layout.tsx  loading.tsx  page.tsx
src/app/_cockpit/: BottomBar.tsx  HubModeStyles.tsx  RailLeft.tsx  RailRight.tsx
src/app/crews/: page.tsx
src/app/login/: LoginForm.tsx  layout.tsx  page.tsx
src/app/swarms/: loading.tsx  page.tsx
src/app/tools/: page.tsx
src/components/: HiveShell.tsx
src/components/cockpit/: AppBottomBar.tsx  LaunchButton.tsx
src/components/crews/: AgentDiff.tsx  AgentStatePanel.tsx  (+3 more)
supabase/migrations/: 0001_init.sql  0002_crewai.sql  0003_crewai_polish.sql  0004_chief_run_log.sql  0005_chief_run_log_rls.sql  0006_swarms_dynamic.sql  0007_seed_chief_of_staff.sql  0008_swarm_run_steps_set_null.sql  0009_swarm_tasks_set_null_relax.sql  0010_security_hardening.sql  0011_fix_function_search_path.sql  0012_personal_swarm_templates.sql  0014_chief_run_steps_and_decisions.sql  0015_chief_owner_id_rls.sql  0020_hedge_core_extensions.sql  0021_hedge_strategy_requests.sql  0022_hedge_run_jobs.sql  0023_hedge_swarm_signals.sql  0024_hedge_strategy_specs.sql  0025_hedge_portfolio_snapshots.sql  0026_hedge_tenant_risk_profiles.sql  0027_hedge_risk_decisions.sql  0028_hedge_exec_orders_outbox.sql  0029_hedge_execution_reports.sql  0030_hedge_run_events.sql  0031_hedge_kill_switches.sql  0032_hedge_audit_log.sql  0033_hedge_market_snapshots.sql  0034_hedge_orderbook_snapshots.sql  0035_hedge_market_events.sql  0036_hedge_position_reconciliations.sql  0037_hedge_execution_alerts.sql  0042_index_unindexed_foreign_keys.sql  0043_fix_function_search_paths_hedge.sql  0045_hedge_audit_log_chain_seq.sql  0046_rls_initplan_and_dedup_permissive.sql
tests/chaos/: README.md  conftest.py  test_clock_skew.py  test_duplicate_request_storm.py  test_invalid_signature_injection.py  test_outbox_ttl_expired.py  test_stale_market_snapshot.py
(+136 files in other folders)
