[project]
name = "hedge-execution-engine"
version = "0.1.0"
description = "HEDGE Execution Engine — dumb dispatcher. No reasoning. No LLM."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "asyncpg>=0.30",
  "httpx>=0.27",
  "structlog>=24.4",
  "tenacity>=9.0",
  "supabase>=2.9",
  "eth-account>=0.13",
  "eth-utils>=4.1",
  "msgpack>=1.1",
  "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
