[project]
name = "hedge-risk-engine"
version = "0.1.0"
description = "HEDGE Risk Engine — single decision authority. No LLM. Deterministic."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "numpy>=2.1",
  "supabase>=2.10",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.30",
  "structlog>=24.4",
  "tenacity>=9.0",
  "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
