[project]
name = "hedge-swarm-orchestrator"
version = "0.1.0"
description = "HEDGE Swarm Orchestrator — runs 4 advisory agents in parallel."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "asyncpg>=0.30",
  "httpx>=0.27",
  "openai>=1.51",
  "structlog>=24.4",
  "tenacity>=9.0",
  "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
